RESOLVED FIXED296164
macOS builds failing after 297559@main
https://bugs.webkit.org/show_bug.cgi?id=296164
Summary macOS builds failing after 297559@main
Lily Spiniolas
Reported 2025-07-17 21:43:11 PDT
Attachments
Lily Spiniolas
Comment 1 2025-07-17 21:44:54 PDT
EWS
Comment 2 2025-07-17 21:47:09 PDT
Committed 297570@main (0aef0ae8290f): <https://commits.webkit.org/297570@main> Reviewed commits have been landed. Closing PR #48222 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.