REGRESSION(297559@main): macOS Builds failing https://bugs.webkit.org/show_bug.cgi?id=296164 rdar://156117800

Unreviewed build fix.

Speculative build fix for failing macOS builds.

* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::adjustSearchFieldDecorationPartStyleForVectorBasedControls const):

Canonical link: https://commits.webkit.org/297570@main